# teste-dev

./: .gitignore  COMMENTS.md  README.md
fretapp/: Dockerfile  docker-compose.yml  pyproject.toml
fretapp-front/: README.md  package.json
fretapp-front/src/: App.vue  helpers.ts
fretapp-front/src/components/: BidForm.vue  CustomerForm.vue  OfferForm.vue  ProviderForm.vue  TableCard.vue
fretapp-front/src/router/: index.ts
fretapp-front/src/services/: busyness.ts  config.ts  enterprises.ts
fretapp-front/src/store/: index.ts
fretapp-front/src/views/: Busyness.vue  Dashboard.vue  Enterprises.vue
fretapp/busyness/: admin.py  models.py  urls.py  views.py
fretapp/busyness/migrations/: 0001_initial.py  0002_rename_from_address_offer__from_and_more.py  0003_rename__from_offer_from.py  0004_bid.py
fretapp/core/: asgi.py  settings.py  urls.py  wsgi.py
fretapp/empresas/: models.py  urls.py  views.py
fretapp/empresas/migrations/: 0001_initial.py  0002_rename_empesa_empresa.py
fretapp/enterprises/: admin.py  models.py  urls.py  views.py
fretapp/enterprises/migrations/: 0001_initial.py  0002_alter_customer_doc_alter_customer_name_and_more.py
fretapp/interprises/: admin.py  apps.py  models.py  urls.py  views.py
fretapp/interprises/migrations/: 0001_initial.py
