[tool.poetry]
name = "fretapp"
version = "0.1.0"
description = ""
authors = ["Leandro Koller <lekoller@yahoo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.13.1"
djongo = "^1.3.6"
dnspython = "^2.2.1"
pymongo = "3.12.1"
mongoengine = "^0.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
